--- a/Clarity Theme/Mod - Review Tags.css
+++ b/Clarity Theme/Mod - Review Tags.css
@@ -1,7 +1,7 @@
 /* 
  * "Clarity" by Valerio Lyndon
  * Review Tags Modification
- * Revision 0.0
+ * Revision 0.1
  */
 
 /* Raise or lower this number to change how wide the box is. Make sure not to remove the "px" from the end of the number. */
@@ -9,7 +9,7 @@
 
 .data.tags div:not(:empty) {
 	padding: 2px 8px;
-	background: #ebebeb;
+	background: var(--btn-bg);
 	border-radius: 8.5px;
 }
 
