R0.3 Optimization & Clean-up
- Optimized banner image (should have been done last revision).

Light Version:
- Added missing styling for .add-edit-more.
- Recoloured tag edit button.

--- a/Clarity Theme/Event Themes/Winter for Dark Mode.css
+++ b/Clarity Theme/Event Themes/Winter for Dark Mode.css
@@ -1,57 +1,25 @@
 /**
  * "Clarity" by Valerio Lyndon
  * Winter Event Modification for Dark Mode
- * Revision 0.2
+ * Revision 0.3
  */
+ 
+ :root {
+	--text-h: #be4141;
+	--text-dim-h: #be4141;
+	--accent: #be4141;
+	
+	--btn-head-bg-h: #be4141;
+}
+
 
 /* - - - - - - - - - - - - - - -*\
-  Accent Colour for Background
-\*- - - - - - - - - - - - - - - */
-
-/* Nav Buttons */
-.header .header-title:hover,
-.icon-menu:hover,
-.list-menu-float .icon-menu:hover,
-.icon-menu.setting .text a:hover,
-.stats a:hover,
-.list-table > tbody:first-of-type:hover:after,
-.list-table-header .header-title a:hover,
-/* Header */
-#status-menu .status-button:after
-{ background: #be4141 !important; }
-
-#status-menu .status-button.all_anime:after { background: #ad9c17 !important; }
-#status-menu .status-button:after { background: #198a2d !important; }
-
-/* - - - - - - - - - - - - - - -*\
-  Accent Colour for Text
-\*- - - - - - - - - - - - - - - */
-
-/* Nav Buttons */
-.header-info a:hover,
-/* General */
-.list-table .list-table-data  .data:not(.score):not(.tags):not(.licensor):not(.studio) a:not(.edit-disabled):hover,
-.data.title .link.sort:hover,
-.list-table .more-info .more-content a:hover
-{ color: #be4141 !important; }
-
-/* - - - - - - - - - - - - - - -*\
-  One-Offs
-\*- - - - - - - - - - - - - - - */
-
-.list-table .more-info .more-content a { border-bottom-color: #be4141; }
-
-.data.tags textarea,
-.data.progress input, .data.chapter input, .data.volume input
-{ outline-color: #be4141 !important; }
-
-/* - - - - - - - - - - - - - - -*\
-  Main Images
+  New Styling
 \*- - - - - - - - - - - - - - - */
 
 /* Header */
 
-.cover-block { background-image: url(https://i.imgur.com/GWNr6Lx.jpg) !important; }
+.cover-block { background-image: url(https://i.imgur.com/t53PJcs.jpg) !important; }
 
 #cover-image-container {
 	position: relative;
@@ -67,10 +35,6 @@
 	color: #fbf7eb;
 	text-shadow: 2px 2px 8px #cba62b;
 }
-
-/* - - - - - - - - - - - - - - -*\
-  New Styling
-\*- - - - - - - - - - - - - - - */
 
 /* Header Fog */
 
@@ -102,7 +66,10 @@
 	animation: fog 120s linear 0s infinite both;
 }
 
-/* Header Lines */
+/* Nav */
+
+#status-menu .status-button.all_anime:after { background: #ad9c17 !important; }
+#status-menu .status-button:after { background: #198a2d !important; }
 
 .status-menu-container:before {
 	height: 56px;
@@ -127,7 +94,7 @@
 body {
 	background-image:
 		linear-gradient(to right, rgba(22,22,22,0.8), rgba(22,22,22,0.9) 20%, rgba(22,22,22,0.96), rgba(22,22,22,0.9) 80%, rgba(22,22,22,0.8)),
-		url(https://i.imgur.com/lQRdGCV.jpg)
+		url(https://i.imgur.com/f4429G9.jpg)
 		!important;
 	background-position: center !important;
 	background-attachment: fixed !important;
@@ -137,7 +104,7 @@ body {
 	background: #212121 no-repeat center / cover fixed !important;
 	background-image:
 		linear-gradient(to right, rgba(33,33,33,0.75), rgba(33,33,33,0.94) 30%, rgba(33,33,33,0.895), rgba(33,33,33,0.94) 70%, rgba(33,33,33,0.75)),
-		url(https://i.imgur.com/lQRdGCV.jpg)
+		url(https://i.imgur.com/f4429G9.jpg)
 		!important;
 }
 
@@ -145,9 +112,8 @@ body {
 
 .list-item:hover .data.tags a.edit { opacity: 0.9; }
 
-.data.score a,
-.data.tags a:not(.edit),
-.data.studio a,
-.data.licensor a {
-	background: rgba(25,25,25,0.9);
-}
+.data.score a, .data.tags a:not(.edit), .data.studio a, .data.licensor a { background: rgba(25,25,25,0.9); }
+
+.list-table .more-info .more-content a { border-bottom-color: #be4141; }
+
+.data.tags textarea, .data.progress input, .data.chapter input, .data.volume input { outline-color: #be4141 !important; }
