--- a/Clarity Theme/Event Themes/Winter for Light Mode.css
+++ b/Clarity Theme/Event Themes/Winter for Light Mode.css
@@ -1,7 +1,7 @@
 /**
  * "Clarity" by Valerio Lyndon
  * Winter Event Modification for Light Mode
- * Revision 0.3
+ * Revision 0.4
  */
 
 :root {
@@ -101,6 +101,8 @@ body {
 	background-attachment: fixed !important;
 }
 
+.list-table { --btn-bg: rgba(255,255,255,0.93); }
+
 .list-item, .data.number, .data.priority, .list-table[data-items="[]"]:after {
 	background: #fff no-repeat center / cover fixed !important;
 	background-image:
@@ -112,8 +114,6 @@ body {
 .list-item, .list-table[data-items="[]"]:after { box-shadow: 0 1px 5px rgba(0,0,0,0.25); }
 
 .list-item:hover .data.tags a.edit { opacity: 0.9; }
-
-.data.score a, .data.tags a:not(.edit), .data.studio a, .data.licensor a { background: rgba(255,255,255,0.93); }
 
 .list-table .more-info .more-content a { border-bottom-color: #ab2929; }
 
