Hover Image R0.3 Maintenance
- Inline with Clarity R22.3

--- a/Clarity Theme/Mod - Hover Image.css
+++ b/Clarity Theme/Mod - Hover Image.css
@@ -1,6 +1,6 @@
-/* "Clarity" Modification by Valerio Lyndon / Hover Image / Revision 0.2 */
+/* "Clarity" Modification by Valerio Lyndon / Hover Image / Revision 0.3 */
 
-.data.image {
+.data.image a {
 	overflow: visible;
 }
 
