Low-Rez Hover Image R0.3 Maintenance
+ Improved animation appearance slightly.
- Inline with Clarity R22.3

--- a/Clarity Theme/Mod - Hover Image Low-Rez.css
+++ b/Clarity Theme/Mod - Hover Image Low-Rez.css
@@ -1,16 +1,12 @@
-/* "Clarity" Modification by Valerio Lyndon / Low-Rez Hover Image / Revision 0.2 */
-
-.data.image {
-	overflow: visible;
-	border-radius: 0;
-}
+/* "Clarity" Modification by Valerio Lyndon / Low-Rez Hover Image / Revision 0.3 */
 
 .data.image .link {
+	overflow: visible;
 	height: 64px;
 }
 
 .data.image .link:after {
-	transition-property: opacity, top !important;
+	transition-property: top !important;
 	border-radius: 50%;
 }
 
