--- a/Clarity Theme/Mod - Dark Mode.css
+++ b/Clarity Theme/Mod - Dark Mode.css
@@ -1,7 +1,7 @@
 /**
  * "Clarity" by Valerio Lyndon
  * Dark Mode Modification
- * Revision 3.0
+ * Revision 3.1
  */
 
 /* - - - - - - - - - - - - - - -*\
@@ -82,6 +82,11 @@
 #fancybox-outer #fancybox-close,
 #advanced-options .advanced-options-button a
 { box-shadow: 0px 1px 2px rgba(0,0,0,0.8); }
+
+
+/* List */
+
+.data.score select { background-image: url(https://i.imgur.com/hFijppc.png); }
 
 
 /* Overlays */
